# ScanShine

./: README.md  build.gradle  gradle.properties  local.properties  ndk_build_readme.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gaspard/scanshine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: magic-lib.cpp  native-lib.cpp
app/src/main/java/com/gaspard/scanshine/: CameraActivity.java  ScanEditAppearanceActivity.java  ScanEditShapeActivity.java  SplashActivity.java
app/src/main/java/com/gaspard/scanshine/utils/: AffineTransformator.java  BestPreviewSizeTool.java  EffectiveMagician.java  ExcelentRotator.java  FocusAreaSpecialist.java  GallerySaveExpert.java
app/src/main/java/com/gaspard/scanshine/views/: CameraView.java  DraggableCorner.java
app/src/main/res/drawable/: clicked_button.xml  corner_shape.xml  half_trans_button.xml  ic_camera_black_60dp.xml  ic_done_black_60dp.xml  ic_history_white_40dp.xml  ic_save_black_24dp.xml  ic_share_black_24dp.xml  ic_zoom_out_map_black_24dp.xml  splash.xml
app/src/main/res/layout/: activity_camera.xml  activity_scan_edit_appearance.xml  activity_scan_edit_shape.xml  my_spinner_item.xml  spinner_dropdown_item.xml
app/src/main/res/transition/: changebounds.xml
app/src/main/res/values/: arrays.xml  attrs.xml  bools.xml  colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/test/java/com/gaspard/scanshine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary342/: build.gradle
(+10 files in other folders)
